# course_app

./: .env  pyproject.toml
src/: main.py
src/api/: dependencies.py
src/api/v1/: root_endpoint.py
src/api/v1/endpoints/: users.py
src/common/security/: jwt_encode.py
src/constants/: enums.py
src/core/: config.py  register.py
src/cruds/: blacklisttoken.py  topic.py  user.py
src/db/: __init__.py  database.py
src/db/models/: blacklisttoken.py  users.py
src/db/models/students/: attempts.py  question_options.py  questions.py  test_status.py  tests.py  topic_status.py  topics.py
src/db/schemas/: tokens.py  users.py
src/db/schemas/students/: tests.py  topics.py
src/services/aws/: s3.py
src/services/domain/: topic.py  user.py
src/utils/: import_utils.py
